# Zypher-HIL-Testbench-Project

./: .gitignore  CMakeLists.txt  README.md  prj.conf
docs/: architecture.md  esp32_testbench_capabilities.md  protocol.md  wiring.md
docs/saleae_validation/: adc_dac_validation.md  dio_validation.md  uart_validation.md
dts/: overlay.dts
firmware/dut_stm32/: CMakeLists.txt  prj.conf
firmware/dut_stm32_2/: CMakeLists.txt  prj.conf
firmware/dut_stm32_3/: CMakeLists.txt  DUT3_FIRMWARE.md  DUT3_WIRING.md  dut3_overview.html  prj.conf
firmware/testbench_esp32/: CMakeLists.txt  app.overlay  prj.conf
firmware/testbench_esp32/src/: board_map.c  board_map.h  dac_service.c  dac_service.h  gpio_service.c  gpio_service.h  main.c  pwm_service.c  pwm_service.h  spi_service.c  spi_service.h  test_executor.c  test_executor.h  uart_service.c  uart_service.h  uart_transport.c  uart_transport.h  wifi_transport.c  wifi_transport.h  ztb_protocol.c  ztb_protocol.h
robot/: log.html  output.xml  report.html  requirements.txt
robot/config/: bench.yaml
robot/resources/: serial_lib.py
robot/test_suites/: pwm_tests.robot
robot_tests/libraries/: TestbenchSerial.py  TestbenchWifi.py
robot_tests/resources/: common_keywords.robot  common_keywords_wifi.robot
robot_tests/tests/: 01_gpio_tests.robot  02_pwm_test.robot  03_spi_test.robot  04_adc_dac_tests.robot  05_dac_out2_tests.robot  (+3 more)
scripts/: switch_to_uart.py  switch_to_wifi.py
src/: command_parser.c  command_parser.h  executor.c  executor.h  main.c  serial_handler.c  serial_handler.h  validator.c  validator.h
(+32 files in other folders)
